Update pom.xml, add failsafe for tests